Fix wrap/overlap issues w/ project title and new JOIN button.

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -3327,7 +3327,7 @@ span.vertical-align-middle-hack {
 }
 
 .project-header .main .project-title {
-    width:625px;
+    width:495px;
 }
 
 .project-header .main .project-title h1,
